--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.3.0",
     "react-native-web": "~0.11.7",
-    "react-navigation": "^3.11.1"
+    "react-navigation": "^3.11.1",
+    "react-navigation-header-buttons": "^3.0.5"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
