--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-gesture-handler": "^1.6.0",
+    "react-native-paper": "^3.6.0",
     "react-native-reanimated": "^1.7.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.3.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^3.11.1",
-    "react-navigation-header-buttons": "^3.0.5"
+    "react-navigation-header-buttons": "^3.0.5",
+    "react-navigation-material-bottom-tabs": "^2.2.10"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
