--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react-native-web": "~0.11.7",
     "react-navigation": "^3.11.1",
     "react-navigation-header-buttons": "^3.0.5",
-    "react-navigation-material-bottom-tabs": "^2.2.10"
+    "react-navigation-material-bottom-tabs": "^2.2.10",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
